# Aletheia-Aegis

./: .env.example  .gitattributes  .gitignore  PROJECT_DETAILS.md  README.md  render.yaml
backend/: .env.example  __init__.py  conftest.py  main.py  pyproject.toml  schemas.py
backend/db/: mongo_repository.py  repository.py
backend/ml/: data_loader.py  language_router.py  model_registry.py  prediction_service.py  train.py  train_multilingual.py
backend/ml/artifacts/: .gitkeep  hi_logistic_regression.joblib  hi_model_metadata.json  hi_tfidf_vectorizer.joblib  logistic_regression.joblib  model_metadata.json  naive_bayes.joblib  te_logistic_regression.joblib  te_model_metadata.json  te_tfidf_vectorizer.joblib  tfidf_vectorizer.joblib
backend/routers/: admin.py  history.py  submissions.py
backend/services/: fact_check_client.py  translator.py  trust_domains.json  trust_rater.py
backend/tests/: smoke_test.py  test_data_loader.py  test_fact_check_client.py  test_history_repository.py  test_integration.py  test_language_router.py  test_model_registry.py  test_prediction_service.py  test_property_csv_parser.py  test_property_history.py  test_property_language_router.py  test_property_prediction.py  test_property_schema_validation.py  test_property_trust_rater.py  test_retrain_lifecycle.py  test_trust_rater.py
extension/: background.js  build.ps1  build.sh  content.js  manifest.json  manifest.v2.json  popup.html  popup.js
extension/icons/: .gitkeep
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+3 more)
(+18 files in other folders)
